--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
-  "name": "stack-sts",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "file-saver": "^2.0.5",
-    "firebase": "^8.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "stack-sts",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@testing-library/jest-dom": "^5.11.4",
+      "@testing-library/react": "^11.1.0",
+      "@testing-library/user-event": "^12.1.10",
+      "draft-js": "^0.11.7",
+      "draftjs-to-html": "^0.9.1",
+      "file-saver": "^2.0.5",
+      "firebase": "^8.2.1",
+      "immutable": "^4.0.0-rc.12",
+      "next-redux-wrapper": "^6.0.2",
+      "react": "^17.0.1",
+      "react-dom": "^17.0.1",
+      "react-draft-wysiwyg": "^1.14.5",
+      "react-router-dom": "^5.2.0",
+      "react-scripts": "4.0.1",
+      "uuid": "^8.3.2",
+      "web-vitals": "^0.2.4"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "eject": "react-scripts eject"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   }
 }
