--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
       "@testing-library/jest-dom": "^5.11.4",
       "@testing-library/react": "^11.1.0",
       "@testing-library/user-event": "^12.1.10",
+      "cors": "^2.8.5",
       "draft-js": "^0.11.7",
       "draftjs-to-html": "^0.9.1",
       "file-saver": "^2.0.5",
       "firebase": "^8.2.1",
+      "html-to-draftjs": "^1.5.0",
       "immutable": "^4.0.0-rc.12",
       "next-redux-wrapper": "^6.0.2",
+      "nodemailer": "^6.4.17",
       "react": "^17.0.1",
       "react-dom": "^17.0.1",
       "react-draft-wysiwyg": "^1.14.5",
