--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "next-redux-wrapper": "^6.0.2",
       "nodemailer": "^6.4.17",
       "react": "^17.0.1",
+      "react-app-polyfill": "^2.0.0",
       "react-dom": "^17.0.1",
       "react-draft-wysiwyg": "^1.14.5",
       "react-router-dom": "^5.2.0",
@@ -45,6 +46,7 @@
          "not op_mini all"
       ],
       "development": [
+         "ie 11",
          "last 1 chrome version",
          "last 1 firefox version",
          "last 1 safari version"
