--- a/package.json
+++ b/package.json
@@ -1,48 +1,57 @@
 {
-   "name": "stack-sts",
-   "version": "0.1.0",
-   "private": true,
-   "dependencies": {
-      "@material-ui/core": "^4.11.2",
-      "@material-ui/icons": "^4.11.2",
-      "@material-ui/lab": "^4.0.0-alpha.57",
-      "draft-js": "^0.11.7",
-      "draftjs-to-html": "^0.9.1",
-      "file-saver": "^2.0.5",
-      "firebase": "^8.2.1",
-      "html-to-draftjs": "^1.5.0",
-      "immutable": "^4.0.0-rc.12",
-      "next-redux-wrapper": "^6.0.2",
-      "react": "^17.0.1",
-      "react-app-polyfill": "^2.0.0",
-      "react-dom": "^17.0.1",
-      "react-draft-wysiwyg": "^1.14.5",
-      "react-router-dom": "^5.2.0",
-      "react-scripts": "4.0.1",
-      "uuid": "^8.3.2"
-   },
-   "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "eject": "react-scripts eject"
-   },
-   "eslintConfig": {
-      "extends": [
-         "react-app",
-         "react-app/jest"
-      ]
-   },
-   "browserslist": {
-      "production": [
-         ">0.2%",
-         "not dead",
-         "not op_mini all"
-      ],
-      "development": [
-         "ie 11",
-         "last 1 chrome version",
-         "last 1 firefox version",
-         "last 1 safari version"
-      ]
-   }
+  "name": "stack-sts",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
+    "file-saver": "^2.0.5",
+    "firebase": "^8.2.1",
+    "immutable": "^4.0.0-rc.12",
+    "next-redux-wrapper": "^6.0.2",
+    "patch-package": "^6.5.1",
+    "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "1.15.0",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "ie 11",
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "process": "^0.11.10",
+    "react-error-overlay": "6.0.9"
+  }
 }
